--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "gsap": "^3.13.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-router": "^7.5.0",
     "react-scroll": "^1.9.3"
   },
